# ocw-studio

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .istanbul.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .sass-lint.yml  .secrets.baseline  .stylelintrc.yaml  .swcrc  .travis.yml  .yarnrc.yml  Aptfile  Dockerfile  Dockerfile-nb  Dockerfile-node  LICENSE  Procfile  README.md  RELEASE.rst  TEST_IMPROVEMENTS.md  app.base.json  app.json  apt.txt  babel.config.js  codecov.yml  conftest.py  docker-compose-arm64.yml  docker-compose-notebook.yml  docker-compose.override.yml  docker-compose.travis.yml  docker-compose.yml  drf_lint_baseline.json  hot-reload-dev-server.js  jest-ckeditor-setup.js  (+24 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  production.yml  release-candiate.yml
.yarn/releases/: yarn-3.8.7.cjs  yarn-4.2.1.cjs
config/: nginx.conf  nginx.conf.erb
content_sync/: __init__.py  admin.py  api.py  api_test.py  apps.py  conftest.py  constants.py  decorators.py  decorators_test.py  factories.py  mass_build_edge_cases_test.py  models.py  models_test.py  serializers.py  serializers_test.py  signals.py  signals_test.py  tasks.py  tasks_test.py  test_constants.py  utils.py  utils_test.py  views.py
content_sync/apis/: github.py  github_test.py  gitlab.py  gitlab_test.py
content_sync/backends/: base.py  base_test.py  github.py  github_test.py  gitlab.py  gitlab_test.py
content_sync/integration_tests/: pipeline_external_resources_test.py
content_sync/migrations/: 0001_add_content_sync_state.py  0002_backpopulate_content_sync_state.py  0003_content_sync_state_nullable_content.py  0004_content_not_nullable.py  0005_auto_20230315_2008.py
content_sync/pipelines/: base.py  concourse.py  concourse_test.py
docker/ocw-course-publisher/: Dockerfile  README.md
docs/: Gemfile  _config.yml  aqueduct.md  changing-a-published-course-url.md  index.md  production-to-local-data-cloning.md  production-to-rc-data-cloning.md
docs/architecture/: data-pipelines.md
docs/ckeditor/: plugin.md
external_resources/: README.md  admin.py  api.py  api_edge_cases_test.py  api_test.py  apps.py  constants.py  exceptions.py  factories.py  models.py  models_test.py  signals.py  signals_test.py  tasks.py  tasks_edge_cases_test.py  tasks_test.py  validation_test.py  views.py
external_resources/migrations/: 0001_initial.py  0002_alter_externalresourcestate_status.py  0003_externalresourcestate_referencing_pages_and_more.py  0003_remove_externalresourcestate_backup_url_response_code_and_more.py
fixtures/: common.py
gdrive_sync/: __init__.py  admin.py  api.py  api_test.py  apps.py  conftest.py  constants.py  decorators.py  factories.py  models.py  models_test.py  signals.py  signals_test.py  tasks.py  tasks_test.py  urls.py  utils.py  utils_test.py  views.py
gdrive_sync/migrations/: 0001_initial.py  0002_drivefile_video.py  0003_drivefile_resource.py  0004_driveapiquerytracker_for_video.py  0005_driveapiquerytracker_remove_for_video.py  0006_drivefile_null_checksum.py  0007_gdrive_sync_status.py  0008_drivefile_size.py  0009_use_bigint_for_drivefile_size.py
localdev/: README.md  app.ipynb.example  config_test.py
localdev/configs/: api.py  api_test.py  basic-site-config.yml  default-course-config.yml  ocw-course-site-config.yml  ocw-www.yml  omnibus-site-config.yml
localdev/starters/: README.md  site-config-override.yml
mail/: messages.py
main/: __init__.py  admin.py  apple.py  apps.py  aqueduct_settings.py  celery.py  constants.py  envs.py  envs_test.py  feature_flags.py  features.py  middleware.py  middleware_test.py  models.py  permissions.py  permissions_test.py  posthog.py  render_bundle_test.py  s3_utils.py  s3_utils_test.py  sentry.py  serializers.py  settings.py  settings_aqueduct.py  settings_aqueduct_dev.py  settings_test.py  slack.py  tasks.py  urls.py  urls_healthcheck.py  urls_test.py  utils.py  utils_test.py  views.py  views_test.py  wsgi.py
main/migrations/: 0001_create_default_robots_txt.py
main/templates/: base.html  index.html
main/templatetags/: render_bundle.py  render_bundle_test.py
news/: __init__.py  urls.py  util.py  util_test.py  views.py  views_test.py
ocw_import/: api.py  api_test.py  conftest.py  constants.py  tasks.py  tasks_test.py
replibyte/: install.sh  replibyte.config
scripts/: upgrade_ckeditor.js
scripts/concourse/: keys.sh
scripts/test/: detect_missing_migrations.sh  js_test.sh  python_tests.sh
static/js/: Root.tsx  Router.js  Router.tsx  babelhook.js  constants.ts  global_init.js  index.tsx  test_constants.ts  test_setup.ts  test_util.ts
static/scss/: _variables.scss  button.scss  card.scss  ckeditor.scss  common.scss  content-listing.scss  dashboard.scss  footer.scss  forms.scss  header.scss  home-page.scss  layout.scss  (+7 more)
test_site_fixtures/: test_website_content.json  test_websites.json
test_videos_webhook/: cloudwatch_sns_complete.json  cloudwatch_sns_error.json  subscribe.json
travis/: js_tests.sh  python_tests.sh
users/: admin.py  admin_test.py  factories.py  models.py  models_test.py  utils.py  utils_test.py
videos/: README.md  __init__.py  admin.py  api.py  api_test.py  apps.py  conftest.py  constants.py  decorators.py  exceptions.py  factories.py  messages.py  models.py  models_test.py  signals.py  signals_test.py  tasks.py  tasks_test.py  threeplay_api.py  threeplay_api_test.py  threeplay_sync.py  threeplay_sync_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py  youtube.py  youtube_test.py
websites/: __init__.py  admin.py  api.py  api_test.py  apps.py  conftest.py  constants.py  deletion_utils.py  deletion_utils_test.py  factories.py  messages.py  migration_0074_test.py  migration_0075_test.py  migration_0076_test.py  models.py  models_test.py  permissions.py  permissions_test.py  serializers.py  serializers_test.py  signals.py  signals_test.py  site_config_api.py  site_config_api_test.py  tasks.py  tasks_test.py  urls.py  utils.py  utils_test.py  views.py  views_collaborator_test.py  views_test.py
(+1244 files in other folders)
