[tool.poetry]
name = "ocw-studio"
description = "OCW Studio manages deployments for OCW courses"
authors = ["MITODL"]
license = "BSD-3"
readme = "README.md"
version = "0.0.0"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"

beautifulsoup4 = "^4.12.2"
boto3 = "1.40.69"
celery = "^5.3.0"
cryptography = "^44.0.0"
dj-database-url = "3.0.1"
django = "4.2.26"
django-anymail = {version = "13.1", extras = ["mailgun"]}
django-bulk-update-or-create = "0.3.0"
django-guardian = "3.2.0"
django-hijack = "3.7.4"
django-model-utils = "5.0.0"
django-redis = "5.0.0"
django-robots = "7.0b0"
django-safedelete = "1.4.1"
django-storages = "1.14.6"
django-webpack-loader = "3.2.1"
djangorestframework = "3.16.1"
drf-extensions = "^0.8.0"
google-api-python-client = "^2.58.0"
google-auth = "^2.11.0"
google-auth-oauthlib = "^1.0.0"
ipython = "^9.0.0"
mitol-django-authentication = "2025.3.17"
mitol-django-common = "^2023.6.27.1"
mitol-django-mail = "^2025.0.0"
more-itertools = "^10.1.0"
newrelic = "^10.0.0"
ol-concourse = "^0.5.8"
ol-concoursepy = "0.0.41"
psycopg2 = "^2.9.6"
pygithub = "2.8.1"
pypdf = "^6.0.0"
python-magic = "^0.4.27"
pyyaml = "^6.0.1"
redis = "^4.5.5"
requests = "2.32.5"
sentry-sdk = "2.42.0"
smart-open = {extras = ["s3"], version = "^7.0.0"}
social-auth-app-django = "5.4.3"
social-auth-core = {version = "^4", extras = ["saml"]}
tqdm = "^4.65.0"
uwsgi = "^2.0.24"
uwsgitop = "^0.12"
yamale = "6.0.0"
xmlsec = "1.3.16"
posthog = "^6.0.0"
mitol-django-transcoding = "^2025.5.21"

[tool.poetry.group.dev.dependencies]
bpython = "^0.25"
ddt = "^1.6.0"
django-debug-toolbar = "^6.0.0"
factory-boy = "^3.3.0"
faker = "^37.0.0"
ipdb = "^0.13.13"
moto = "^5.0.0"
nplusone = "^1.0.0"
pdbpp = "^0.11.0"
pre-commit = "^4.0.0"
pytest = "^8.0.0"
pytest-cov = "^7.0.0"
pytest-django = "^4.5.2"
pytest-env = "1.2.0"
pytest-mock = "^3.11.1"
ruff = "^0.14"
semantic-version = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
ignore = [
    "B008",
    "B905",
    "D104",
    "D200",
    "D202",
    "D205",
    "D301",
    "D400",
    "ISC001",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF012",
    "UP007"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["ARG001", "E501", "S101", "PLR2004"]
"test_*.py" = ["ARG001", "E501", "S101", "PLR2004"]
"**/migrations/**" = ["ARG001"]
"**/apps.py" = ["PLC0415"]
"repl.py" = ["S603"]
